--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,7 +1,7 @@
 <!-- It is not recommended to modify this code, unless you are a Pro-->
 
 <meta charset="utf-8">
-<!-- <title>{% if page.title %}{{ page.title }} &#8211; {% endif %}{{ site.title }}</title> -->
+<title>{% if page.title %}{{ page.title }} &#8211; {% endif %}{{ site.title }}</title>
 {% if page.description %}<meta name="description" content="{{ page.description }}">{% endif %}
 {% if page.tags %}<meta name="keywords" content="{{ page.tags | join: ', ' }}">{% endif %}
 {% if site.owner.twitter %}<!-- Twitter Card and Open Graph meta -->
